fixed overflow issue

--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -6,18 +6,19 @@
 .skills {
     position: relative;
     top: 5rem;
-    margin-bottom: 5rem;
+
     overflow: hidden;
 
     &__background {
         position: relative;
 
 
+
         &--area {
             background: #00b7ff;
             background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
             width: 100%;
-            height: 80vh;
+            height: 85vh;
             z-index: 1;
 
 
